# framework.multimedia.libcamsrcjpegenc

./: configure.ac
packaging/: libcamsrcjpegenc.spec
src/: Makefile.am  camsrcjpegenc.c
src/include/: camsrcjpegenc_type.h
